# kvm-client

./: README.md  flake.nix  pyproject.toml
.github/workflows/: build.yaml
nix/: simplejpeg.diff
src/kvm_client/: __init__.py  asp2000.py  capture.py  gui.py  kvm.py  proto.py  proxy.py  web.py
